--- a/packages/create-node-lib/template/base/tsconfig.json
+++ b/packages/create-node-lib/template/base/tsconfig.json
@@ -7,7 +7,7 @@
     "strict": true,
     "allowJs": true,
     "esModuleInterop": true,
-    "moduleResolution": "Bundler",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
