--- a/packages/create-node-lib/template/rollup/package.json
+++ b/packages/create-node-lib/template/rollup/package.json
@@ -21,26 +21,27 @@
     "lint": "eslint --cache .",
     "typecheck": "tsc --noEmit",
     "dev": "tsx --env-file=.env src/index.ts",
-    "build": "npm run lint && rollup -c rollup.config.ts --configPlugin typescript",
+    "build": "npm run typecheck && rollup -c rollup.config.ts --configPlugin typescript",
     "test": "vitest run"
   },
   "devDependencies": {
-    "@eslint/js": "^9.24.0",
+    "@eslint/js": "^9.36.0",
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@types/node": "^22.14.1",
-    "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-prettier": "^5.2.6",
-    "globals": "^16.0.0",
-    "prettier": "^3.5.3",
-    "rollup": "^4.40.0",
-    "rollup-plugin-dts": "^6.2.1",
+    "@rollup/plugin-typescript": "^12.1.4",
+    "@types/node": "^22.18.6",
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.4.0",
+    "prettier": "^3.6.2",
+    "rollup": "^4.52.0",
+    "rollup-plugin-dts": "^6.2.3",
     "rollup-plugin-rm": "^1.0.2",
+    "tslib": "^2.8.1",
     "tsx": "^4.20.5",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.1",
-    "vitest": "^3.1.1"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.44.0",
+    "vitest": "^3.2.4"
   }
 }
