--- a/packages/create-node-lib/template/tsdown/package.json
+++ b/packages/create-node-lib/template/tsdown/package.json
@@ -4,12 +4,12 @@
   "description": "A Node.js library starter",
   "type": "module",
   "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     }
   },
@@ -21,21 +21,21 @@
     "lint": "eslint --cache .",
     "typecheck": "tsc --noEmit",
     "dev": "tsx --env-file=.env src/index.ts",
-    "build": "npm run lint && unbuild",
+    "build": "npm run typecheck && tsdown",
     "test": "vitest run"
   },
   "devDependencies": {
-    "@eslint/js": "^9.24.0",
-    "@types/node": "^22.14.1",
-    "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-prettier": "^5.2.6",
-    "globals": "^16.0.0",
-    "prettier": "^3.5.3",
+    "@eslint/js": "^9.36.0",
+    "@types/node": "^22.18.6",
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.4.0",
+    "prettier": "^3.6.2",
+    "tsdown": "^0.15.4",
     "tsx": "^4.20.5",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.1",
-    "vitest": "^3.1.1",
-    "unbuild": "^3.5.0"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.44.0",
+    "vitest": "^3.2.4"
   }
 }
