--- a/packages/create-electron/template/vue-ts/tsconfig.web.json
+++ b/packages/create-electron/template/vue-ts/tsconfig.web.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@electron-toolkit/tsconfig/tsconfig.web.json",
+  "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": [
     "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
